[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-firewall"
version = "0.1.0.dev1"
description = "Contract and CLI shell for local-first integrity checks on persistent agent memory."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "eoniclife", email = "247195684+eoniclife@users.noreply.github.com" },
]
keywords = [
    "ai",
    "agents",
    "memory",
    "integrity",
    "provenance",
    "contracts",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agent-memory-contracts>=1.3,<1.4",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jsonschema>=4.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/eoniclife/memory-firewall"
Issues = "https://github.com/eoniclife/memory-firewall/issues"
Source = "https://github.com/eoniclife/memory-firewall"

[project.scripts]
memory-firewall = "memory_firewall.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memory_firewall = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
files = ["src/memory_firewall", "tests"]

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true
